Prueba de endpoints para 3 roles como Médico, Administrador , Estudiante